--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "homepage": "http://AnjaliRaj05.github.io/E-commerce-site",
   "name": "e-site",
   "version": "0.1.0",
   "private": true,
+ 
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.10.6",
@@ -13,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.12.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.2.1",
@@ -27,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
